--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
     <main>
         <div id = "main">
             <h2>Bacon Q Dog</h2>
-            <img src="images/Pets/Bacon/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <div class = "main-photo">
+                <img src="images/Pets/Bacon/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            </div>
 
             <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three different beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as long as he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not wanting to admit he has no wolf-like skills in chasing them.</p> 
             <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a ride." There is also a lot of rolling. Lots and lots of rolling.</P>
             <h3>Photo Gallery</h3>
-            <div class = "pet-gallery">
-                <img src="images/Pets/Bacon/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana" class = "gallery-1">
-                <img src="images/Pets/Bacon/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown" class = "gallery-2">
-                <video width="200"  controls class = "gallery-3">
+            <div class = "gallery">
+                <img src="images/Pets/Bacon/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
+                <img src="images/Pets/Bacon/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
+                <video width="200"  controls>
                     <source src="images/Pets/Bacon/bacon_agility.mov">
                     Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
                 </video>
-                <img src="images/Pets/Bacon/bacon_halloween.JPG"  width ="200" alt="Brown labradoodle wearing a pirate costume" class = "gallery-3">
+                <img src="images/Pets/Bacon/bacon_halloween.JPG"  width ="200" alt="Brown labradoodle wearing a pirate costume">
             </div>
 
             <h3>Likes</h3>
@@ -47,7 +49,9 @@
         </div>
         <div>
             <h2>Rocket</h2>
-            <img src="images/Pets/Rocket/rocket_primary.jpg" width = "400" alt="Cute, small and yellow pomeranian">
+            <div class = "main-photo">
+                <img src="images/Pets/Rocket/rocket_primary.jpg" width = "400" alt="Cute, small and yellow pomeranian">
+            </div>
 
             <p>
                 Rocket (also named huihui) is a 6-month pomeranian puppy with big eyes and a small, black cute nose. Rocket is named rocket because he runs so fast and energetic all day without even having some rest. Rocket loves to carry his little toy walking around the house and jumping towards my bed.
@@ -56,14 +60,15 @@
                 Rocket is friendly to all human beings. He will be a little shy at first, but will ‘say hi’ to you after a few seconds. He is also friendly to dogs, especially the small breed, because the large size dogs are hard for him to smell lol. If you meet rocket, don’t hesitate to say hi to him!! He will be super happy the whole day.
             </p>
             <h3>Photo Gallery</h3>
-            <img src="images/Pets/Rocket/rocket_childhood.jpg" width ="200" alt = "Rocket is eating his dinner.">
-            <img src="images/Pets/Rocket/rocket_wants_to_go_out.jpg"  width ="200" alt="Rocket wants to come out of the playpen.">
-            <video width="200"  controls>
-                <source src="images/Pets/Rocket/rocket_kitchen_clip.mp4">
-                Your browser does not support the video tag.  This was a video of Rocket playing with kitchen clip.
-            </video>
-            <img src="images/Pets/Rocket/rocket_dinner.jpg"  width ="200" alt="Rocket is trying to hunt the kitchen clip.">
-
+            <div class = "gallery">
+                <img src="images/Pets/Rocket/rocket_childhood.jpg" width ="200" alt = "Rocket is eating his dinner.">
+                <img src="images/Pets/Rocket/rocket_wants_to_go_out.jpg"  width ="200" alt="Rocket wants to come out of the playpen.">
+                <video width="200"  controls>
+                    <source src="images/Pets/Rocket/rocket_kitchen_clip.mp4">
+                    Your browser does not support the video tag.  This was a video of Rocket playing with kitchen clip.
+                </video>
+                <img src="images/Pets/Rocket/rocket_dinner.jpg"  width ="200" alt="Rocket is trying to hunt the kitchen clip.">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Chewing Bones</li>
@@ -75,7 +80,9 @@
         </div>
         <div>
             <h2>Pluto</h2>
-            <img src="images/Pets/Pluto/pluto.jpg" width = "400" alt="White dog looking up">
+            <div class = "main-photo">
+                <img src="images/Pets/Pluto/pluto.jpg" width = "400" alt="White dog looking up">
+            </div>
 
             <p>
                 Pluto is a five year old rescue dog of an unknown breed. He was found wandering alone and taken to the Valley Humane Society where he found his new family. From a young age, Pluto always had a special personality, he was known for being very very lazy! He spends most of his time staring out the window to keep watch of his house. Don't let the laziness fool you because Pluto defends his family from the mailman and squirrels every single day.
@@ -85,11 +92,13 @@
 
             </p>
             <h3>Photo Gallery</h3>
-            <img src="images/Pets/Pluto/pluto_cookie.JPG" width ="200" alt = "Pluto the dog standing up to eat a cookie.">
-            <img src="images/Pets/Pluto/pluto_sitting.jpg"  width ="200" alt="Pluto sitting and posed on top of a table">
-            <img src="images/Pets/Pluto/pluto_sleeping.jpg"  width ="200" alt="Pluto sleeping on bed.">
-            <img src="images/Pets/Pluto/pluto_walk.jpg"  width ="200" alt="Pluto the dog on a walking trail.
-            ">
+            <div class = "gallery">
+                <img src="images/Pets/Pluto/pluto_cookie.JPG" width ="200" alt = "Pluto the dog standing up to eat a cookie.">
+                <img src="images/Pets/Pluto/pluto_sitting.jpg"  width ="200" alt="Pluto sitting and posed on top of a table">
+                <img src="images/Pets/Pluto/pluto_sleeping.jpg"  width ="200" alt="Pluto sleeping on bed.">
+                <img src="images/Pets/Pluto/pluto_walk.jpg"  width ="200" alt="Pluto the dog on a walking trail.
+                ">
+            </div>
 
             <h3>Likes</h3>
             <ul>
@@ -102,7 +111,9 @@
         </div>
         <div>
             <h2>Fitz</h2>
-            <img src="images/Pets/Fitz/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
+            <div class = "main-photo">
+                <img src="images/Pets/Fitz/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
+            </div>
 
             <p>
                 Loves chasings tennis balls, chipmunks, squirrels, and birds. Often found sitting by the fire in wintertime, and in sun patches when available. He's energetic, mischievous, and easily bored. He loves people and gets grumpy if left without a lap too long. 
@@ -112,11 +123,12 @@
 
             </p>
             <h3>Photo Gallery</h3>
-            <img src="images/Pets/Fitz/Fitz_laying_in_bed.jpeg" width = "200" alt="Fitz sleeping with his face buried in a plaid blanket, only his head is visible. ">
-            <img src="images/Pets/Fitz/Fitz_on_the_lawn.jpeg" width = "200" alt="Fitz laying out on the lawn in the grass. ">
-            <img src="images/Pets/Fitz/Fitz_sleeping.jpeg" width = "200" alt="Fitz sleeping in a fuzzy dog bed.">
-            <img src="images/Pets/Fitz/Fitz_standing_on_chair.jpeg" width = "200" alt="Fitz standing on a wooden chair, looking at the camera. ">
-
+            <div class = "gallery">
+                <img src="images/Pets/Fitz/Fitz_laying_in_bed.jpeg" width = "200" alt="Fitz sleeping with his face buried in a plaid blanket, only his head is visible. ">
+                <img src="images/Pets/Fitz/Fitz_on_the_lawn.jpeg" width = "200" alt="Fitz laying out on the lawn in the grass. ">
+                <img src="images/Pets/Fitz/Fitz_sleeping.jpeg" width = "200" alt="Fitz sleeping in a fuzzy dog bed.">
+                <img src="images/Pets/Fitz/Fitz_standing_on_chair.jpeg" width = "200" alt="Fitz standing on a wooden chair, looking at the camera. ">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Blankets</li>
@@ -128,7 +140,9 @@
         </div>
         <div>
             <h2>Chako</h2>
-            <img src="images/Pets/Chako/Chako1.jpg" width = "400" alt="Black and Tan color Shiba Inu">
+            <div class = "main-photo">
+                <img src="images/Pets/Chako/Chako1.jpg" width = "400" alt="Black and Tan color Shiba Inu">
+            </div>
 
             <p>
                 With a coat as dark as midnight but eyes as bright as stars, he seemed to embody both the mystery and the exuberance of life itself. Agile and playful, he danced around the park as if the grass were his personal stage, captivating everyone with his vivacity.
@@ -137,10 +151,12 @@
                 Yet, when at home, Chako transformed into a zen master. He would curl up on his favorite rug, eyes half-closed in contemplation, as if solving the great puzzles of the universe. Both spirited and serene, Mochi was a living testament to the richness of dualities, teaching his human companions that one could be many things all at once.
             </p>
             <h3>Photo Gallery</h3>
-            <img src="images/Pets/Chako/Chako2.jpg" width = "200" alt="Chako is lazy but still wants to look outside.">
-            <img src="images/Pets/Chako/Chako3.jpg" width = "200" alt="Chako is so tired and he is having a good night's sleep.">
-            <img src="images/Pets/Chako/Chako4.jpg" width = "200" alt="Chako doesn't want to move, so he sits there and watches.            ">
-            <img src="images/Pets/Chako/Chako5.jpg" width = "200" alt="Chako loves comfortable beds.">
+            <div class = "gallery">
+                <img src="images/Pets/Chako/Chako2.jpg" width = "200" alt="Chako is lazy but still wants to look outside.">
+                <img src="images/Pets/Chako/Chako3.jpg" width = "200" alt="Chako is so tired and he is having a good night's sleep.">
+                <img src="images/Pets/Chako/Chako4.jpg" width = "200" alt="Chako doesn't want to move, so he sits there and watches.            ">
+                <img src="images/Pets/Chako/Chako5.jpg" width = "200" alt="Chako loves comfortable beds.">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Sleep</li>
