change figure names in code

--- a/travel.html
+++ b/travel.html
@@ -173,7 +173,7 @@
             <h3>Photo Gallery</h3>
             <div class = "travel-gallery">
             <figure>
-                <img src="images/Travel/Bangkok/khlong _lat_mayom.jpeg" width = "200" alt="Khlong Lat Mayom water market">
+                <img src="images/Travel/Bangkok/khlong_lat_mayom.jpeg" width = "200" alt="Khlong Lat Mayom water market">
                 <figcaption>Khlong Lat Mayom, one of the best floating markets in Bangkok.It is most famous for its food. Try snakehead fish and the shrimps.</figcaption>
             </figure>
 
@@ -194,7 +194,7 @@
             </figure>
 
             <figure>
-                <img src="images/Travel/Bangkok/Lumpini Park.jpeg" width = "200" alt="Lumpini Park">
+                <img src="images/Travel/Bangkok/lumpini_park.jpeg" width = "200" alt="Lumpini Park">
                 <figcaption>Lumpini Park (or Lumphini Park) is one of the largest green spaces in central Bangkok. Founded in the 1920s, this inner-city park spans over 500,000 sq m and is home to various flora and fauna.</figcaption>
             </figure>
             </div>
